--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   "main": "index.js",
   "name": "@webkrafters/auto-bst",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
