--- a/package.json
+++ b/package.json
@@ -11,42 +11,29 @@
     "@babel/cli": "^7.17.0",
     "@babel/core": "^7.20.5",
     "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.20.2",
-    "@types/jest-cli": "^24.3.0",
-    "babel-jest": "^26.6.3",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.13.0",
     "babel-loader": "^8.2.5",
-    "eslint": "^8.29.0",
+    "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
-    "jest-cli": "^26.6.3",
-    "typescript": "^4.8.2"
-  },
-  "engines": {
-    "node": ">=14.6.0"
+    "jest": "^29.7.0",
+    "jest-util": "^30.0.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   },
   "files": [
-    "dist/index.js",
-    "dist/index.d.ts",
-    "index.js",
-    "package.json"
+    "dist"
   ],
   "homepage": "https://github.com/webKrafters/auto-bst#readme",
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ],
-    "testPathIgnorePatterns": [
-      "dist"
-    ],
-    "transform": {
-      "\\.[jt]sx?$": "babel-jest"
-    }
-  },
   "keywords": [
     "bst",
     "autobst",
@@ -60,7 +47,7 @@
     "binary search tree"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
   "name": "@webkrafters/auto-bst",
   "publishConfig": {
     "access": "public",
@@ -71,13 +58,12 @@
     "url": "git+https://github.com/webKrafters/auto-bst.git"
   },
   "scripts": {
-    "build": "eslint --fix && rm -rf dist && babel src -d dist --ignore '**/*.test.js' && npx -p typescript tsc",
-    "lint": "eslint --fix",
-    "test": "eslint --fix && jest --coverage",
-    "test:core": "jest",
-    "test:watch": "eslint --fix && jest --watchAll",
-    "postbuild": "node ./postbuild.js"
+    "build": "rm -rf dist && tsc && babel dist -d dist",
+    "test": "jest --coverage --updateSnapshot",
+    "test:clean": "jest --clearCache",
+    "test:core": "jest --updateSnapshot",
+    "test:watch": "jest --updateSnapshot --watchAll"
   },
   "types": "dist/index.d.ts",
-  "version": "1.0.6"
+  "version": "2.0.0"
 }
